--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.82.0",
+    "@web3modal/wagmi": "^5.1.11",
     "ethers": "^6.15.0",
+    "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "viem": "^2.31.6",
-    "wagmi": "^2.15.6",
-    "web3modal": "^1.9.12"
+    "viem": "^2.31.7",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
