--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.82.0",
     "@web3modal/wagmi": "^5.1.11",
+    "axios": "^1.10.0",
     "ethers": "^6.15.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
