working on getting balances

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@covalenthq/client-sdk": "^2.3.0",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.82.0",
